tests/01-invalid_type.stderr
error: type must be a integer
 --> tests/01-invalid_type:6:11
  |
6 | #[bitflag(Custom)]
  |           ^^^^^^
